@@ -25,8 +25,8 @@ module TMail
     }
 
     alnum      = 'a-zA-Z0-9'
-    atomsyms   = %q[  _#!$%&`'*+-{|}~^/=?  ].strip
-    tokensyms  = %q[  _#!$%&`'*+-{|}~^.    ].strip
+    atomsyms   = %q[  _#!$%&`'*+-{|}~^@/=?  ].strip
+    tokensyms  = %q[  _#!$%&`'*+-{|}~^@.    ].strip
 
     atomchars  = alnum + Regexp.quote(atomsyms)
     tokenchars = alnum + Regexp.quote(tokensyms)
