@@ -1,0 +1,34 @@
+From xxx@xxxx.com Wed Apr 27 14:15:31 2005
+Mime-Version: 1.0 (Apple Message framework v619.2)
+To: xxxxx@xxxxx <matmail>
+Message-Id: <416eaebec6d333ec6939eaf8a7d80724@xxxxx>
+Content-Type: multipart/alternative;
+        boundary=Apple-Mail-5-1037861608
+From: xxxxx@xxxxx <xxxxx@xxxxx>
+Subject: worse when you use them.
+Date: Wed, 27 Apr 2005 14:15:31 -0700
+
+
+
+
+--Apple-Mail-5-1037861608
+Content-Transfer-Encoding: 7bit
+Content-Type: text/plain;
+        charset=US-ASCII;
+        format=flowed
+
+
+XXXXX Xxxxx
+
+--Apple-Mail-5-1037861608
+Content-Transfer-Encoding: 7bit
+Content-Type: text/enriched;
+        charset=US-ASCII
+
+
+
+<bold>XXXXX Xxxxx</bold>
+
+
+--Apple-Mail-5-1037861608--
+
