@@ -1,5 +1,7 @@
 *SVN*
 
+* Unquoted @ characters in headers are now accepted in spite of RFC 822 #1206
+
 * Helper support (borrowed from ActionPack)
 
 * Silently ignore Errno::EINVAL errors when converting text.
